GITBOOK-2133: change request with no subject merged in GitBook